Hotfix: Fix overlap between bgm credit link and previous button

--- a/style.css
+++ b/style.css
@@ -347,7 +347,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 .bgm-credit {
   font-size: 12px; color: #b898a0;
-  margin-top: 16px; text-align: center;
+  margin-top: 16px; margin-bottom: 70px; text-align: center;
 }
 .bgm-credit a {
   color: #a07880; text-decoration: underline;
